# PakFu

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  VERSION  meson.build  meson_options.txt
.github/: release-notes-instructions.md
.github/workflows/: auto_version.yml  hardening.yml  nightly.yml  pr-ci.yml  release.yml
assets/img/: pakfu-icon-256.icns
assets/shaders/: bsp_preview.frag  bsp_preview.frag.qsb  bsp_preview.vert  bsp_preview.vert.qsb  grid_lines.frag  grid_lines.frag.qsb  grid_lines.vert  grid_lines.vert.qsb  model_preview.frag  model_preview.frag.qsb  model_preview.vert  model_preview.vert.qsb
docs/: CORE_LIBRARY.md  CREDITS.md  DEPENDENCIES.md  EXTENSIONS.md  FILE_ASSOCIATION_ICONS.md  QA_ARCHIVE_FILE_OPS.md  RELEASES.md  ROADMAP_COMPLETION.md  SUPPORT_MATRIX.md  THEME_CONTRAST_MATRIX.md  UI_BUTTON_ICONS.md  UX_PERFORMANCE_BASELINE.md  UX_VALIDATION.md
docs/proposals/: improvements.md  improvements2.md  improvements3.md  ux-workflow-analysis-1-may-2026.md
examples/extensions/: README.md
examples/extensions/metadata-dump/: README.md  metadata_dump.cpp  plugin.json
install/: pakfu_config.h
install/pakfu.exe.p/: moc_breadcrumb_bar.cpp  moc_bsp_preview_vulkan_widget.cpp  moc_cinematic_player_widget.cpp  moc_model_viewer_vulkan_widget.cpp  moc_pak_tab.cpp  moc_preferences_tab.cpp  moc_preview_pane.cpp  moc_splash_screen.cpp  moc_update_service.cpp  moc_video_player_widget.cpp
packaging/linux/: io.github.themuffinator.PakFu.desktop  io.github.themuffinator.PakFu.metainfo.xml  io.github.themuffinator.PakFu.mime.xml
packaging/macos/: Info.plist.in
scripts/: build_user_guide.py  deploy_win.ps1  ensure_qt6.ps1  ensure_qt6.sh  meson_build.ps1  next_version.py  nightly_release_notes.py  nightly_version.py  package_linux.sh  package_macos.sh  package_windows.ps1  release_assets.py  release_manifest.py  release_notes.py  sync_doc_versions.py  update_changelog.py  ux_roadmap_audit.py  validate_build.py  validate_release_assets.py  validate_shell_integration.py
src/: main.cpp  meson.build  pakfu.rc  pakfu_config.h.in  pakfu_core.h  resources.qrc
src/archive/: archive.cpp  archive.h  archive_entry.h  archive_search_index.cpp  archive_search_index.h  archive_session.cpp  archive_session.h  dir_archive.cpp  dir_archive.h  path_safety.h
src/cli/: cli.cpp  cli.h
src/extensions/: extension_plugin.cpp  extension_plugin.h
src/formats/: bsp_preview.cpp  bsp_preview.h  cin_cinematic.cpp  cin_cinematic.h  cinematic.cpp  cinematic.h  dds_image.cpp  dds_image.h  fontdat_font.cpp  fontdat_font.h  ftx_image.cpp  ftx_image.h  idtech4_map.cpp  idtech4_map.h  idtech_asset_loader.cpp  idtech_asset_loader.h  idwav_audio.cpp  idwav_audio.h  image_loader.cpp  image_loader.h  image_writer.cpp  image_writer.h  lmp_image.cpp  lmp_image.h  m32_image.cpp  m32_image.h  m8_image.cpp  m8_image.h  miptex_image.cpp  miptex_image.h  model.cpp  model.h  pcx_image.cpp  pcx_image.h  quake3_shader.cpp  quake3_shader.h  quake3_skin.cpp  quake3_skin.h  roq_cinematic.cpp  roq_cinematic.h  (+8 more)
src/foundation/: performance_metrics.cpp  performance_metrics.h
src/game/: game_auto_detect.cpp  game_auto_detect.h  game_set.cpp  game_set.h
src/pak/: pak_archive.cpp  pak_archive.h
src/platform/: crash_handler.cpp  crash_handler.h  file_associations.cpp  file_associations.h
src/resources/: resources_archive.cpp  resources_archive.h
src/tests/: archive_search_index_test.cpp  archive_writer_roundtrip_test.cpp  cinematic_fuzzer.cpp  core_api_smoke_test.cpp  extension_plugin_test.cpp  foundation_phase_test.cpp  fuzz_harness_utils.h  game_auto_detect_test.cpp  image_fuzzer.cpp  model_fuzzer.cpp  pak_fuzzer.cpp  resources_fuzzer.cpp  support_matrix_fixture_test.cpp  wad_fuzzer.cpp  zip_fuzzer.cpp
src/tools/: model_probe.cpp  roq_probe.cpp
src/ui/: about_dialog.cpp  about_dialog.h  audio_viewer_window.cpp  audio_viewer_window.h  background_task_coordinator.cpp  background_task_coordinator.h  breadcrumb_bar.cpp  breadcrumb_bar.h  bsp_preview_vulkan_widget.cpp  bsp_preview_vulkan_widget.h  bsp_preview_widget.cpp  bsp_preview_widget.h  cfg_syntax_highlighter.cpp  cfg_syntax_highlighter.h  cinematic_player_widget.cpp  cinematic_player_widget.h  design_tokens.h  drag_drop_policy.cpp  drag_drop_policy.h  file_associations_dialog.cpp  file_associations_dialog.h  file_dialog_utils.cpp  file_dialog_utils.h  game_set_dialog.cpp  game_set_dialog.h  game_set_editor_dialog.cpp  game_set_editor_dialog.h  image_viewer_window.cpp  image_viewer_window.h  main_window.cpp  main_window.h  model_viewer_vulkan_widget.cpp  model_viewer_vulkan_widget.h  model_viewer_widget.cpp  model_viewer_widget.h  model_viewer_window.cpp  model_viewer_window.h  pak_tab.cpp  pak_tab.h  practical_qa.cpp  (+31 more)
src/update/: update_service.cpp  update_service.h
src/wad/: wad_archive.cpp  wad_archive.h
src/zip/: quakelive_pk3_crypto.cpp  quakelive_pk3_crypto.h  zip_archive.cpp  zip_archive.h
