option(
  'github_repo',
  type: 'string',
  value: 'themuffinator/PakFu',
  description: 'GitHub repo (owner/name) used for update checks.'
)

option(
  'update_channel',
  type: 'combo',
  choices: ['stable', 'beta', 'dev'],
  value: 'stable',
  description: 'Update channel selection.'
)

option(
  'vulkan_preview',
  type: 'feature',
  value: 'auto',
  description: 'Build the Vulkan 3D preview renderer when Qt private RHI headers are available.'
)
